# ChangeLog for net-mail/postfix
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/postfix/ChangeLog,v 1.106 2004/02/06 16:09:39 max Exp $

  06 Feb 2004; Max Kalika <max@gentoo.org> postfix-2.0.10-r1.ebuild,
  postfix-2.0.11.ebuild, postfix-2.0.12-r1.ebuild, postfix-2.0.13-r1.ebuild,
  postfix-2.0.14.ebuild, postfix-2.0.15-r1.ebuild, postfix-2.0.17.ebuild,
  postfix-2.0.9.ebuild, files/postfix, files/postfix-2.0.8_patch.patch,
  files/postfix-pg.postfix-2.0.0.2.patch.bz2, files/saslpass,
  files/smtpd-2.0.conf, files/postfix-2.0.0/master.cf.diff,
  files/postfix-2.0.14/main.cf.diff:
  Cleanup some stale files.

*postfix-2.0.18 (23 Jan 2004)

  23 Jan 2004; Max Kalika <max@gentoo.org> postfix-2.0.18.ebuild:
  Bump version to 2.0.18.

*postfix-2.0.17 (20 Jan 2004)

  20 Jan 2004; Max Kalika <max@gentoo.org> postfix-2.0.17.ebuild:
  Bump version to 2.0.17.

  18 Jan 2004; <tuxus@gentoo.org> postfix-2.0.16-r1.ebuild:
  Added ~mips to KEYWORDS.

  16 Jan 2004; Max Kalika <max@gentoo.org> postfix-2.0.16-r1.ebuild:
  Provide proper include path for PostgreSQL depending on which version is
  installed. Fixes bug #38401.

  14 Jan 2004; Max Kalika <max@gentoo.org> postfix-1.1.11.20020917-r1.ebuild,
  postfix-1.1.11.20020917.ebuild, postfix-2.0.10-r1.ebuild,
  postfix-2.0.12-r1.ebuild, postfix-2.0.13-r1.ebuild, postfix-2.0.14.ebuild,
  postfix-2.0.15-r1.ebuild, postfix-2.0.16-r1.ebuild, postfix-2.0.9.ebuild,
  files/gentestcrt.sh, files/tls+ipv6-1.4-pf-1.1.11-20020917.patch.bz2:
  Bump 2.0.16-r1 to stable x86. Add FSH link /usr/sbin/sendmail ->
  /usr/lib/sendmail. Do not keepdir on the queue directories to minimize bogus
  errors in the mail log. Only install the sasl conf to /etc/sasl2 as the latest
  sasl looks there for the config files.

  10 Jan 2004; Jason Wever <weeve@gentoo.org> postfix-2.0.11.ebuild:
  Marked stable on sparc.

  20 Dec 2003; Martin Schlemmer <azarah@gentoo.org> files/smtp.pam: