@@ -1,6 +1,6 @@
 MD5 3e5baf2cc497a5fb1aaa6ba11aa6491e postfix-2.0.18.tar.gz 1353649
 MD5 55a3d76d52fddd5cd0365004957a1160 postfix-2.0-ns-mx-acl-patch.gz 4673
-MD5 b39c08eabe807db4af5bcb1cafc9761e pfixtls-0.8.16-2.0.16-0.9.7b.tar.gz 234105
-MD5 e59b9d580bd0299bc0ed76902984c2c4 ipv6-1.20-pf-2.0.16.patch.gz 46978
-MD5 9e26a2bb0cf36d6a9739c501ec26246a tls+ipv6-1.20-pf-2.0.16.patch.gz 254580
+MD5 2d9b07d3847a06b77db3be25973acf14 pfixtls-0.8.16-2.0.18-0.9.7c.tar.gz 234300
+MD5 f30495d44b140239df02a0599d280d68 ipv6-1.21-pf-2.0.18.patch.gz 47266
+MD5 8d273f922352a0ff32c57c29bec26b46 tls+ipv6-1.21-pf-2.0.18.patch.gz 254862
 MD5 5a0aa5ef6a231a593eb6c5628236a3e4 postfix-pg.postfix-2.0.0.2.patch 27419
