@@ -1,6 +1,9 @@
 # ChangeLog for net-mail/postfix
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/postfix/ChangeLog,v 1.106 2004/02/06 16:09:39 max Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/postfix/ChangeLog,v 1.107 2004/02/09 23:58:53 max Exp $
+
+  09 Feb 2004; Max Kalika <max@gentoo.org> postfix-2.0.18.ebuild:
+  Bump TLS patch to 2.0.18, IPV6+TLS patch to 1.21.
 
   06 Feb 2004; Max Kalika <max@gentoo.org> postfix-2.0.10-r1.ebuild,
   postfix-2.0.11.ebuild, postfix-2.0.12-r1.ebuild, postfix-2.0.13-r1.ebuild,
